--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "query-param",
+  "name": "@patomation/query-param",
   "version": "0.0.0",
   "description": "A module to get query string parameters from the window object ",
   "main": "src/index.js",
