--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@patomation/query-param",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A module to get query string parameters from the window object ",
   "public": true,
   "main": "lib/index.cjs.js",
@@ -18,7 +18,7 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "commit-msg": "commitlint --config commitlint.config.json -E HUSKY_GIT_PARAMS",
       "pre-commit": "run-s lint test"
     }
   },
@@ -35,7 +35,11 @@
     "location",
     "substring",
     "javascript",
-    "es6"
+    "es6",
+    "typescript",
+    "localStorage",
+    "persist",
+    "persisted"
   ],
   "author": "Patrick Kelly",
   "license": "MIT",
