feat(dev): relase and publish npm scripts

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build": "rollup -c",
     "lint": "eslint --ext .ts .",
     "test": "mocha -r ts-node/register test/test.ts",
-    "coverage": "nyc mocha -r ts-node/register test/test.ts"
+    "coverage": "nyc mocha -r ts-node/register test/test.ts",
+    "release": "standard-version",
+    "publish": "git push --follow-tags && npm publish"
   },
   "husky": {
     "hooks": {
