--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint --config commitlint.config.json -E HUSKY_GIT_PARAMS",
-      "pre-commit": "run-s lint test"
+      "pre-commit": "npm run lint && npm run test"
     }
   },
   "repository": {
